# api-demo

./: pyproject.toml
api_demo/: DTO.py  currency.py  file.pickle  main.py  repository.py
api_demo/customer/: 3fa85f64-5717-4562-b3fc-2c963f66afa6.pickle
api_demo/inventory/: apple.pickle  banana.pickle  orange.pickle
tests/: __init__.py
