[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = "FastAPI poetry learning demo"
authors = ["Harel Fishbein"]
readme = "README.md"
packages = [{include = "api_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
fastapi = "^0.99.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
