[tool.poetry]
name = "api-demo"
version = "0.1.0"
description = "FastAPI poetry learning demo"
authors = ["Harel Fishbein"]
readme = "README.md"
packages = [{include = "api_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
aiofile = "^3.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
